--- a/sfml_lostinspace/sfml_lostinspace.vcxproj.filters
+++ b/sfml_lostinspace/sfml_lostinspace.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Star.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Starfield.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Star.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Starfield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
