--- a/sfml_lostinspace/sfml_lostinspace.vcxproj.filters
+++ b/sfml_lostinspace/sfml_lostinspace.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Starfield.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Spaceship.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -47,5 +50,13 @@
     <ClCompile Include="Starfield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spaceship.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="viper.gif">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
