--- a/sfml_lostinspace/sfml_lostinspace.vcxproj
+++ b/sfml_lostinspace/sfml_lostinspace.vcxproj
@@ -83,6 +83,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Missile.h" />
     <ClInclude Include="Spaceship.h" />
     <ClInclude Include="Star.h" />
     <ClInclude Include="Starfield.h" />
@@ -91,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Missile.cpp" />
     <ClCompile Include="sfml_lostinspace.cpp" />
     <ClCompile Include="Spaceship.cpp" />
     <ClCompile Include="Star.cpp" />
