Changed text creation and fiddled with some values for the enemies.

--- a/sfml_lostinspace/sfml_lostinspace.vcxproj
+++ b/sfml_lostinspace/sfml_lostinspace.vcxproj
@@ -105,10 +105,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="viper.gif" />
+    <Image Include="viper.gif">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
+    </Image>
   </ItemGroup>
   <ItemGroup>
-    <Font Include="rock.ttf" />
+    <Font Include="rock.ttf">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
+    </Font>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
